se agregó la fecha a la application

--- a/style.css
+++ b/style.css
@@ -73,6 +73,16 @@ h1.temp{
     align-items: center;
 }
 
+.weather.loading{
+    visibility: hidden;
+}
+
+.weather.loading::after{
+    visibility: visible;
+    content: "Loading...";
+    color: #fff;
+}
+
 .footer{
     font-size: 14px;
     text-align: center;
